--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bower": "^1.8.0"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "bower install",
     "update-deps": "npm update",
     "postupdate-deps": "bower update",
     "prestart": "npm install",
